feat: add wip sample/song playing code

--- a/style.less
+++ b/style.less
@@ -196,3 +196,11 @@ body {
 .brown {
   color: @color-brown;
 }
+
+.debug-pane {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background: rgba(0, 0, 0, 0.5);
+}
